--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1",
+    "sqlite3": "^5.1.7",
     "uuid": "^3.3.3",
     "wait-port": "^0.2.2"
   },
